# LDtkLoader

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  level.ldtk  main.cpp
.github/workflows/: cmake.yml  codeql.yml
cmake/: LDtkLoaderConfig.cmake.in
cmake/modules/: FindSDL2_image.cmake
doc/: BgImage.yml  DataTypes.yml  Doxyfile  Entity.yml  Enum.yml  Fields.yml  FieldsContainer.yml  Layer.yml  Level.yml  Project.yml  TagsContainer.yml  Tile.yml  Tileset.yml  World.yml
examples/API_test/: CMakeLists.txt  README.md  all_features.ldtk  all_features_external.ldtk  main.cpp
examples/API_test/all_features_external/: Autolayer.ldtkl  Background_image.ldtkl  Everything.ldtkl  Tiles_and_intgrid.ldtkl
examples/API_test/assets/: all_features.ldtk  all_features_external.ldtk
examples/API_test/assets/all_features_external/: Everything.ldtkl
examples/Raylib/: CMakeLists.txt  main.cpp
examples/Raylib/assets/: level.ldtk
examples/SDL/: CMakeLists.txt  main.cpp
examples/SDL/assets/: level.ldtk
examples/SFML/: CMakeLists.txt  level.ldtk  main.cpp
examples/SFML/assets/: level.ldtk
examples/console/: CMakeLists.txt  level.ldtk  main.cpp
include/: Layer.hpp  Level.hpp
include/LDtkLoader/: DataTypes.hpp  Entity.hpp  EntityDef.hpp  Enum.hpp  Field.hpp  FieldsContainer.hpp  Layer.hpp  LayerDef.hpp  Level.hpp  Project.hpp  TagsContainer.hpp  Tile.hpp  Tileset.hpp  Utils.hpp  World.hpp
include/LDtkLoader/containers/: FieldsContainer.hpp  TagsContainer.hpp
include/LDtkLoader/defs/: EntityDef.hpp  FieldDef.hpp  LayerDef.hpp
src/: DataTypes.cpp  Entity.cpp  EntityDef.cpp  Enum.cpp  FieldsContainer.cpp  Layer.cpp  LayerDef.cpp  Level.cpp  Project.cpp  TagsContainer.cpp  Tile.cpp  Tileset.cpp  Utils.cpp  Version.hpp.in  World.cpp  json.hpp
tools/: generate_wiki.py
